--- a/www/css/style.css
+++ b/www/css/style.css
@@ -59,6 +59,17 @@ footer{
 #submit{
   padding: 10px;
   font-size: 24px;
+  background-color: #ccc;
+  color: #333;
+	-moz-transition: background-color 2s ease-out;
+	-webkit-transition: background-color 2s ease-out;
+	-o-transition: background-color 2s ease-out;
+	transition: background-color 2s ease-out;
+}
+
+#submit.error{
+  background-color: #800000;
+  color: #fff;
 }
 
 #submit:hover{
